css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";



// Our variables
$base-font-family: "PT Serif", serif;
$base-font-size:   1.1em;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$base-font-weight: 600;

$sans-font-family: "Work Sans", sans-serif;
$spacing-unit:     30px;

$text-color:       #111;
$background-color: #fdfdfd;
$brand-color:      #2a7ae2;

$grey-color:       #828282;
$light-grey:       #F2F1EF;
$blue-color:       #17223C;
$pink-color:       #F49BC2;
$dark-pink-color:  #FF5AF7;
$purple-color:     #313887;
$lt-purple-color:  #505085;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    1250px;
$heading-width:    1450px;

$on-palm:          600px;
$on-laptop:        800px;



// Using media queries with like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}



// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "base",
        "contributing",
        "landing",
        "layout",
        "docs",
        "blog",
        "syntax-highlighting"
;

